--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       background-image: radial-gradient(#334155 1px, transparent 1px);
       background-size: 20px 20px;
     }
+    
+    /* Simple fade-in animation */
+    @keyframes fade-in {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fade-in {
+      animation: fade-in 0.2s ease-out forwards;
+    }
   </style>
 <script type="importmap">
 {
