--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@^21.0.6?external=rxjs",
     "@angular/core": "https://esm.sh/@angular/core@^21.0.6?external=rxjs",
     "@angular/forms": "https://esm.sh/@angular/forms@^21.0.6?external=rxjs",
-    "@angular/common": "https://esm.sh/@angular/common@^21.0.6?external=rxjs"
+    "@angular/common": "https://esm.sh/@angular/common@^21.0.6?external=rxjs",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.0"
   }
 }
 </script>
